Added code to app.js and config.js
Created the following files;
-events.js
-created a handlebars file
-ui.js

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,23 @@
 @import '~bootstrap/scss/bootstrap';
+
+#sign-out-button {
+  display: none;
+  text-align: left;
+}
+
+#change-password-form {
+  display: none;
+  text-align: left;
+}
+
+#user-message {
+  display: none;
+}
+
+#sign-up-form {
+  text-align: left;
+}
+
+#sign-in-form {
+  text-align: left;
+}
