--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -21,3 +21,15 @@
 #sign-in-form {
   text-align: left;
 }
+
+#get-reviews-form {
+  display: none;
+}
+
+#create-review-form {
+  display: none;
+}
+
+#update-review-form {
+  display: none;
+}
