--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -33,3 +33,22 @@
 #update-review-form {
   display: none;
 }
+
+#reviews-display {
+  display: none;
+}
+
+h1 {
+  text-align: center;
+  font-family: serif;
+  font-size: 75px;
+}
+
+legend {
+  font-size: 20px;
+  font-style: italic;
+}
+
+fieldset {
+  border-radius: 12px;
+}
