Removed some commented out code

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -47,8 +47,9 @@ h1 {
 legend {
   font-size: 20px;
   font-style: italic;
+  margin-left: 15px;
 }
 
-fieldset {
-  border-radius: 12px;
+form {
+  border-radius: 10px;
 }
