Added files for consoles

--- a/assets/scripts/console-listing.handlebars
+++ b/assets/scripts/console-listing.handlebars
@@ -11,7 +11,7 @@
   </section>
 
   <form data-id="{{console.id}}" class="update-console-form">
-    <input type="text" name="console[text]" placeholder="updateConsole">
+    <input required type="text" name="console[text]" placeholder="updateConsole">
     <button type="submit">Update Console</button>
   </form>
 {{/each}}
