Fixed issue with update refreshing and not displaying

--- a/assets/scripts/review-listing.handlebars
+++ b/assets/scripts/review-listing.handlebars
@@ -11,7 +11,7 @@
   </section>
 
   <form data-id="{{review.id}}" class="update-review-form">
-    <input required type="text" name="review[text]" placeholder="updateReview">
+    <input type="text" name="review[text]" placeholder="Update Review">
     <button type="submit">Update Review</button>
   </form>
 {{/each}}
